--- a/HTML ir CSS/09 paskaita - 02.24 - Flex ir Grid displays/styles/main.css
+++ b/HTML ir CSS/09 paskaita - 02.24 - Flex ir Grid displays/styles/main.css
@@ -1,5 +1,13 @@
 @import url('https://necolas.github.io/normalize.css/8.0.1/normalize.css');
 
+body{
+  background-color: rgb(164, 232, 210);
+}
+
+html{
+  scroll-behavior: smooth;
+}
+
 .kvadratas{
   width: 100px;
   height: 100px;
@@ -42,4 +50,71 @@
 }
 .itemFlex2{
   flex: 2 1 0;
+}
+
+.tallEmpty{
+  height: 500px;
+}
+
+.fonas1{
+  height: 500px;
+  background-image: url('../images/nature4.jpg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  /* font-size: 10rem;
+  background-clip: text;
+  -webkit-background-clip: text; 
+  color: transparent; */
+  /* background-repeat: no-repeat; */
+}
+
+.fonas2{
+  height: 500px;
+  position: relative;
+}
+.fonas2 > img[alt='bgImage']{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+.z_index{
+  background-color: rgba(186, 237, 169, 0.49);
+  height: 100%;
+  position: relative;
+  z-index: 2;
+}
+
+/* Menu */
+header{
+  position: sticky;
+  z-index: 1000;
+  top: 0;
+  height: 50px;
+  background-color: azure;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+header ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 10px;
+}
+
+header ul > li > a{
+  text-decoration: none;
+  font-size: 1.5rem;
+  transition: 0.5s;
+}
+header ul > li > a:hover{
+  color: green;
+}
+
+section[id]{
+  scroll-margin-top: 50px;
 }
