--- a/HTML ir CSS/12 paskaita - 03.01 - Ikonos, Selektoriai, Tranzicijos, Animacijos/styles/main.css
+++ b/HTML ir CSS/12 paskaita - 03.01 - Ikonos, Selektoriai, Tranzicijos, Animacijos/styles/main.css
@@ -1,4 +1,5 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
+@import url('https://necolas.github.io/normalize.css/8.0.1/normalize.css');
 
 *[class*='bi']{
   color: red;
@@ -17,9 +18,9 @@ li::after{
   color: blue;
   font-size: 5px;
 }
-li::first-line{
+/* li::first-line{
   background-color: beige;
-}
+} */
 li::first-letter{
   font-size: 25px;
 }
@@ -34,4 +35,8 @@ input::placeholder{
 li::selection{
   color: yellow;
   background-color: black;
+}
+
+li:nth-child(2n){
+  background-color: antiquewhite;
 }
