--- a/HTML ir CSS/13 paskaita - 03.02 - Tranzicijos, Animacijos, Responsiveness MobileFirst principu/styles/main.css
+++ b/HTML ir CSS/13 paskaita - 03.02 - Tranzicijos, Animacijos, Responsiveness MobileFirst principu/styles/main.css
@@ -39,17 +39,18 @@ div.helperTall{
   background-color: red;
   color: white;
   display: flex;
-  justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
-  animation-duration: 10s;
+  justify-content: center;
+  text-align: center;
+  /* animation-duration: 10s;
   animation-timing-function: linear;
-  animation-delay: 0s;
+  animation-delay: 5s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
   animation-fill-mode: none;
   animation-play-state: running;
-  animation-name: betkoks;
+  animation-name: betkoks; */
+  animation: 10s linear 0s infinite alternate none running betkoks;
 }
 .animationPvz > div:nth-child(1):hover{
   animation-play-state: paused;
@@ -65,6 +66,7 @@ div.helperTall{
     border: 0px solid black;
     transform: translate(100px, 300px);
     border-radius: 0%;
+    width: 50px;
   } 100% {
     background-color: orange;
     transform: translate(100px, 0px);
