--- a/HTML ir CSS/14 paskaita - 03.03 - Praktika su Responsive Design/styles/main.css
+++ b/HTML ir CSS/14 paskaita - 03.03 - Praktika su Responsive Design/styles/main.css
@@ -19,3 +19,65 @@ section#units{
   font-size: 16px;
   font-size: 1em;
 }
+
+/* simpleResponsiveLayout */
+section#simpleResponsiveLayout{
+  height: 80vh;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 2fr 1fr 4fr 4fr repeat(5, 2fr) 1fr;
+  gap: 10px;
+}
+.sidebar{
+  display: none;
+  background-color: red;
+}
+.header{
+  grid-area: 1 / 1 / 2 / 3;
+  background-color: greenyellow;
+}
+.hero{
+  grid-area: 2 / 1 / 3 / 3;
+  background-color: purple;
+}
+.about1{
+  grid-area: 3 / 1 / 4 / 3;
+  background-color: orange;
+}
+.about2{
+  grid-area: 4 / 1 / 5 / 3;
+  background-color: orange;
+}
+div[class^='photoAndStuff']{
+  background-color: blue;
+}
+.footer{
+  grid-area: -1 / 1 / -2 / 3;
+  background-color: greenyellow;
+}
+
+@media (min-width:576px){
+  section#simpleResponsiveLayout{
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 2fr 2fr 5fr 5fr repeat(4, 2fr) 1fr;
+  }
+  .sidebar{
+    display: block;
+    grid-area: 2 / 1 / -2 / 2;
+  }
+  .header{
+    /* grid-area: kitokie nustatymai; */
+  }
+  .hero{
+    /* grid-area: kitokie nustatymai; */
+  }
+  .about1{
+    /* grid-area: kitokie nustatymai; */
+  }
+  .about2{
+    /* grid-area: kitokie nustatymai; */
+  }
+  .footer{
+    /* grid-area: kitokie nustatymai; */
+  }
+}
