--- a/HTML ir CSS/15 paskaita - 03.06 - Likusios CSS temos/styles/main.css
+++ b/HTML ir CSS/15 paskaita - 03.06 - Likusios CSS temos/styles/main.css
@@ -1,7 +1,7 @@
 /* externals */
-@import url();
-@import url();
-@import url();
+/* @import url('normalize'); */
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css');
+/* @import url('icons'); */
 /* variables and header and footer */
 @import url();
 @import url();
