--- a/JavaScript/25 paskaita - 03.20 - JS DOM manipuliavimo praktika/styles/main.css
+++ b/JavaScript/25 paskaita - 03.20 - JS DOM manipuliavimo praktika/styles/main.css
@@ -1,3 +1,8 @@
+section{
+  margin-bottom: 20px;
+  border: 5px dashed black;
+}
+
 .raudonasTekstas{
   color: red;
 }
@@ -40,4 +45,19 @@
 }
 .kortele1 > p{
   text-align: justify;
+}
+
+.relative{
+  position: relative;
+}
+.absolute{
+  position: absolute;
+}
+
+.rodytiSleptiMygtukas{
+  width: 100px;
+  height: 35px;
+  color: red;
+  background-color: rgb(26, 243, 26);
+  font-size: 1.3rem;
 }
